--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@openzeppelin/contracts": "^4.4.1",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
+    "electron": "^16.0.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.8.0",
-    "ipfs-http-client": "50.1.2",
+    "ipfs-http-client": "45.0.0",
+    "mui-image": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "vite": "^2.7.2"
   }
 }
